To fix some alignments bug, forcing selections to be always ltr

--- a/src/cdn/elements/selections.css
+++ b/src/cdn/elements/selections.css
@@ -2,6 +2,7 @@
 .checkbox,
 .radio,
 .switch {
+  direction: ltr;
   inline-size: auto;
   block-size: auto;
   line-height: normal;
@@ -90,17 +91,8 @@
   transform: translate(-3rem, -50%) scale(0.6);
 }
 
-[dir=rtl] .switch > span::before,
-[dir=rtl] .switch.icon > span > i {
-  transform: translate(0.25rem, -50%) scale(0.6);
-}
-
 .switch.icon > span > i {
   transform: translate(-3rem, -50%) scale(1);
-}
-
-[dir=rtl] .switch.icon > span > i {
-  transform: translate(0.25rem, -50%) scale(1);
 }
 
 .checkbox > span::before {
@@ -166,11 +158,6 @@
   transform: translate(-1.75rem, -50%) scale(1);
 }
 
-[dir=rtl] .switch > input:checked + span::before,
-[dir=rtl] .switch.icon > input:checked + span > i {
-  transform: translate(1.5rem, -50%) scale(1);
-}
-
 :is(.checkbox, .radio, .switch) > input:disabled + span {
   opacity: 0.5;
   cursor: not-allowed;
@@ -198,11 +185,6 @@
 .switch > span::after {
   transform: translate(-3.25rem, -50%);
 }
-
-[dir=rtl] .switch > span::after {
-  transform: translate(3.25rem, -50%);
-}
-
 
 .field > :is(nav, .row) {
   flex-grow: 1;
